--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -635,7 +635,7 @@
 					-ms-transition: all 0.2s ease-in-out;
 					transition: all 0.2s ease-in-out;
 					border-radius: 100%;
-					border: solid 1px #fff;
+					border: solid 1px #a0e0f7;
 					display: block;
 					font-size: 1.75em;
 					height: 2.5em;
@@ -651,8 +651,8 @@
 				}
 
 					#header nav a:hover:before {
-						background-color: rgba(160, 224, 247, 0.175);
-						color: #a0e0f7;
+						background-color: rgba(255, 255, 255, 0.175);
+						color: #fff;
 					}
 
 				#header nav a:active {
