--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -68,7 +68,7 @@
 	}
 
 	body {
-		background: #fff;
+		background: #c0ccd1;
 		overflow: hidden;
 	}
 
@@ -635,7 +635,7 @@
 					-ms-transition: all 0.2s ease-in-out;
 					transition: all 0.2s ease-in-out;
 					border-radius: 100%;
-					border: solid 1px #a0e0f7;
+					border: solid 1px #fff;
 					display: block;
 					font-size: 1.75em;
 					height: 2.5em;
