--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,7 @@
 /* Basic */
 
 	body, input, select, textarea {
-		color: #fff;
+		color: #c0ccd1;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 15pt;
 		font-weight: 300 !important;
