--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,7 +59,7 @@
 /* Basic */
 
 	body, input, select, textarea {
-		color: #c0ccd1;
+		color: #fff;
 		font-family: 'Source Sans Pro', sans-serif;
 		font-size: 15pt;
 		font-weight: 300 !important;
@@ -68,7 +68,7 @@
 	}
 
 	body {
-		background: #c0ccd1;
+		background: #032d3d;
 		overflow: hidden;
 	}
 
